[add] user layout [add] styling in css to user

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,12 +9,30 @@ body{
   background-color: black;
 }
 
+.w-100{
+  width: 100%;
+}
+
 .relative{
   position: relative;
 }
 
 .absolute{
   position: absolute;
+}
+
+.container{
+  width: 90%;
+  min-width: 100px;
+  margin: 0 auto;
+}
+
+.flex-container{
+  display: flex;
+}
+
+.flex-wrap{
+  flex-wrap: wrap;
 }
 
 .top-menu{
@@ -45,6 +63,27 @@ body{
 main{
   height: calc(100vh - 170px);
   overflow: scroll;
+}
+
+.user{
+  width: calc(100%/7);
+  min-width: 200px;
+  padding: 0px 2px;
+}
+
+.user .name{
+  bottom: 10px;
+  left: 0;
+  color: white;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: capitalize;
+  padding: 5px 8px;
+  background-color: rgba(128, 128, 128, 0.555);
+}
+
+.user .name i{
+  margin-right: 2px;
 }
 
 .bottom-menu{
