--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,20 @@
 }
 
 body{
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: black;
+}
+
+i{
+  color: white;
 }
 
 .w-100{
   width: 100%;
+}
+
+.h-100{
+  height: 100%;
 }
 
 .relative{
@@ -31,8 +39,24 @@ body{
   display: flex;
 }
 
+.column{
+  flex-direction: column;
+}
+
 .flex-wrap{
   flex-wrap: wrap;
+}
+
+.justify-content{
+  justify-content: center;
+}
+
+.align-items{
+  align-items: center;
+}
+
+.space-between{
+  justify-content: space-between;
 }
 
 .top-menu{
@@ -50,7 +74,7 @@ body{
   color: white;
   background-color: #4A4A4A;
   font-size: 14px;
-  font-weight: 800px;
+  font-weight: 700;
   text-transform: capitalize;
   border-radius: 5px;
 }
@@ -67,7 +91,7 @@ main{
 
 .user{
   width: calc(100%/7);
-  min-width: 200px;
+  min-width: 230px;
   padding: 0px 2px;
 }
 
@@ -76,7 +100,7 @@ main{
   left: 0;
   color: white;
   font-size: 14px;
-  font-weight: 600;
+  font-weight: 500;
   text-transform: capitalize;
   padding: 5px 8px;
   background-color: rgba(128, 128, 128, 0.555);
@@ -89,4 +113,39 @@ main{
 .bottom-menu{
   height: 100px;
   background-color: #222222;
+  padding-bottom: 20px;
+}
+
+.left-content{
+  padding-left: 10px;
+}
+
+.icon-layout .icon{
+  color: white;
+}
+
+.icon-layout .icon i{
+  font-size: 30px;
+  margin-bottom: 5px;
+}
+
+.icon-layout .icon.description{
+  font-size: 12px;
+  font-weight: 500;
+}
+
+.icon-layout .selector i{
+  font-size: 12px;
+  margin: 0 20px;
+}
+
+.bottom-menu .right-content button{
+  height: 100%;
+  padding: 0 20px;
+  border: none;
+  border-radius: none;
+  background-color: #4A4A4A;
+  font-weight: 700;
+  color: red;
+  cursor: pointer;
 }
